--- a/_posts/2024-03-25-preSum.md
+++ b/_posts/2024-03-25-preSum.md
@@ -45,12 +45,12 @@ int main(){
 		for(int idx=i;idx<=j;++idx){
 			pair<int,double> temp_op = op[idx];
 			if(temp_op.first==1){
-				sum_k*=temp_op.second;
+				sum_k*=temp_op.second;//记录累计K
 			}else{
-				sum_th+=temp_op.second; 
+				sum_th+=temp_op.second; //记录累计r
 			}
 		}
-		sum_th = fmod(sum_th, 2 * acos(-1));
+		sum_th = fmod(sum_th, 2 * acos(-1));//以为自己聪明能降时间，其实没鸟用
 		cout << fixed << setprecision(3)<<sum_k*x*cos(sum_th)-sum_k*y*sin(sum_th)<<" "<<sum_k*x*sin(sum_th)+sum_k*y*cos(sum_th)<<endl;
 	}
 	return 0;
@@ -92,5 +92,3 @@ int main(){
 	return 0;
 }
 ~~~
-
-## 
