--- a/_posts/2024-04-06-ViT.md
+++ b/_posts/2024-04-06-ViT.md
@@ -1,17 +1,13 @@
 ---
 layout: post
-title: "Deepfake检测综述"
-date:   2024-04-05
+title: "Vision Transformer"
+date:   2024-04-06
 tags: [paper]
 comments: true
 author: Gnonymous
 ---
 
 <center><img src="../images/vit_paper.png"></center>
-
-
-
-> [zhish]](https://zhuanlan.zhihu.com/p/356155277)
 
 >声明：本博客参考——[知乎](https://zhuanlan.zhihu.com/p/356155277)
 
