--- a/_posts/2024-04-06-ViT.md
+++ b/_posts/2024-04-06-ViT.md
@@ -7,7 +7,7 @@ comments: true
 author: Gnonymous
 ---
 
-<center><img src="https://gitee.com/Gnonymous/img/raw/master/img/image-20240406195636756.png"></center>
+<center><img src="../images/vit_paper.png"></center>
 
 >声明：本博客参考——[知乎](https://zhuanlan.zhihu.com/p/356155277)
 
